xử lý file pdf + docxdocx

--- a/SWD-Grading-Backend/SWD-Grading-Backend/SWD-Grading/SWD-Grading/appsettings.json.example
+++ b/SWD-Grading-Backend/SWD-Grading-Backend/SWD-Grading/SWD-Grading/appsettings.json.example
@@ -17,7 +17,7 @@
   },
   "FileUpload": {
     "MaxFileSizeMB": 500,
-    "AllowedExtensions": [".zip"],
+    "AllowedExtensions": [".zip", ".rar"],
     "TempStoragePath": "temp/uploads"
   },
   "Qdrant": {
