--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 tactical-crow-477907-v3-f82bca1b39a9.json
 SWD-Grading-Backend/SWD-Grading-Backend/.git
 SWD-Grading-Frontend/PRN_FINAL/.git
+# Build output directories
 obj/
+**/obj/
+bin/
+**/bin/
 
