--- a/SWD-Grading-Backend/SWD-Grading-Backend/SWD-Grading/BLL/BLL.csproj
+++ b/SWD-Grading-Backend/SWD-Grading-Backend/SWD-Grading/BLL/BLL.csproj
@@ -20,8 +20,11 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0" />
     <PackageReference Include="Qdrant.Client" Version="1.12.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.20.1" />
-    <PackageReference Include="Google.Apis.Drive.v3" Version="1.68.0.3511" />
-    <PackageReference Include="Google.Apis.Auth" Version="1.68.0.3511" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.70.0.3834" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.70.0.3834" />
+    <PackageReference Include="SharpCompress" Version="0.41.0" />
+    <PackageReference Include="itext7" Version="8.0.5" />
+    <PackageReference Include="NPOI" Version="2.7.1" />
   </ItemGroup>
 
   <ItemGroup>
